--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,70 @@
-name: Build Android APK
-on: [push]
+name: Build APK Manually
+on:
+  push:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Free Disk Space
-        run: |
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /opt/ghc
-          sudo rm -rf "/usr/local/share/boost"
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-
-      - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer
+      # 1. Setup Java 17 (Required for Android builds)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          command: buildozer android debug
-          buildozer_version: master
+          java-version: '17'
+          distribution: 'temurin'
 
+      # 2. Setup Python 3.10
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      # 3. Install System Dependencies (The tools Android needs)
+      - name: Install System Deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            build-essential \
+            git \
+            ffmpeg \
+            libsdl2-dev \
+            libsdl2-image-dev \
+            libsdl2-mixer-dev \
+            libsdl2-ttf-dev \
+            libportmidi-dev \
+            libswscale-dev \
+            libavformat-dev \
+            libavcodec-dev \
+            zlib1g-dev \
+            libgstreamer1.0 \
+            gstreamer1.0-plugins-base \
+            gstreamer1.0-plugins-good \
+            libltdl-dev \
+            libffi-dev \
+            libssl-dev \
+            autoconf \
+            libtool \
+            automake
+
+      # 4. Install Buildozer & Cython
+      - name: Install Buildozer
+        run: |
+          pip install --upgrade pip
+          pip install buildozer
+          # Kivy requires this specific version of Cython
+          pip install "Cython<3.0" 
+
+      # 5. Run the Build
+      - name: Build with Buildozer
+        run: |
+          # 'yes' accepts the Android SDK license agreement automatically
+          yes | buildozer android debug
+
+      # 6. Upload the Result
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
