--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,68 +5,72 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # Using 22.04 is more stable for Android builds than 'latest'
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      # 1. Setup Java 17 (Required for Android builds)
-      - name: Set up JDK 17
+      # 1. Setup Java 17 (Required for Android SDK)
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
           distribution: 'temurin'
+          java-version: '17'
 
-      # 2. Setup Python 3.10
-      - name: Set up Python
+      # 2. Setup Python 3.10 (Most stable for Kivy compilation)
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      # 3. Install System Dependencies (The tools Android needs)
-      - name: Install System Deps
+      # 3. Install System Dependencies (The part that was likely failing)
+      - name: Install System Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
+            python3-pip \
             build-essential \
             git \
-            ffmpeg \
-            libsdl2-dev \
-            libsdl2-image-dev \
-            libsdl2-mixer-dev \
-            libsdl2-ttf-dev \
-            libportmidi-dev \
-            libswscale-dev \
-            libavformat-dev \
-            libavcodec-dev \
-            zlib1g-dev \
-            libgstreamer1.0 \
-            gstreamer1.0-plugins-base \
-            gstreamer1.0-plugins-good \
-            libltdl-dev \
+            python3-dev \
             libffi-dev \
             libssl-dev \
+            libltdl-dev \
+            zlib1g-dev \
+            libncurses5-dev \
+            libncursesw5-dev \
+            libreadline-dev \
+            libsqlite3-dev \
+            libgdbm-dev \
+            libdb5.3-dev \
+            libbz2-dev \
+            libexpat1-dev \
+            liblzma-dev \
+            tk-dev \
+            libjpeg-dev \
+            libpng-dev \
+            libfreetype6-dev \
             autoconf \
             libtool \
-            automake
+            openjdk-17-jdk
 
       # 4. Install Buildozer & Cython
       - name: Install Buildozer
         run: |
           pip install --upgrade pip
-          pip install buildozer
-          # Kivy requires this specific version of Cython
-          pip install "Cython<3.0" 
+          pip install --user buildozer cython==0.29.36
+          # Add local bin to path so we can run buildozer
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      # 5. Run the Build
-      - name: Build with Buildozer
+      # 5. Run the Build (Verbose mode to see errors)
+      - name: Build APK
         run: |
-          # 'yes' accepts the Android SDK license agreement automatically
-          yes | buildozer android debug
+          # Automatically accept licenses using the yes command safely
+          yes | buildozer -v android debug
 
       # 6. Upload the Result
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: vgadmin-package
+          name: vgadmin-manual-build
           path: bin/*.apk
